[gd_scene load_steps=29 format=2]

[ext_resource path="res://UI/buttonsmall.png" type="Texture" id=1]
[ext_resource path="res://fonts/wii.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/buttonsmallpressed.png" type="Texture" id=3]
[ext_resource path="res://Function Presets/Auto.gd" type="Script" id=4]
[ext_resource path="res://UI/LineEdit.png" type="Texture" id=5]
[ext_resource path="res://UI/LineEditFocus.png" type="Texture" id=6]
[ext_resource path="res://fonts/ARIALBD 1.TTF" type="DynamicFontData" id=7]
[ext_resource path="res://LineEdit.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/Triangle.png" type="Texture" id=9]
[ext_resource path="res://UI/Trianglepressed.png" type="Texture" id=10]
[ext_resource path="res://UI/HugePanel.png" type="Texture" id=11]
[ext_resource path="res://small.tres" type="Theme" id=13]

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 645, 25 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 645, 25 )

[sub_resource type="Theme" id=20]
PopupMenu/fonts/font = SubResource( 15 )
PopupMenu/icons/radio_checked = ExtResource( 10 )
PopupMenu/icons/radio_unchecked = ExtResource( 9 )
PopupMenu/styles/hover = SubResource( 14 )
PopupMenu/styles/panel = SubResource( 13 )

[sub_resource type="StreamTexture" id=21]

[sub_resource type="StyleBoxTexture" id=22]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 733, 320 )

[sub_resource type="StyleBoxTexture" id=23]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 733, 320 )

[sub_resource type="StyleBoxTexture" id=24]

[sub_resource type="StyleBoxTexture" id=25]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 733, 320 )

[sub_resource type="DynamicFont" id=26]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=27]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=32]
size = 60
font_data = ExtResource( 7 )

[sub_resource type="ImageTexture" id=33]

[sub_resource type="Animation" id=34]
resource_name = "Move Camera Off"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("returns:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RichTextLabel14:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("camera:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -47 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("camera/CamY:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("camera/RichTextLabel15:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=35]
resource_name = "Move Camera On"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("returns:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RichTextLabel14:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("camera:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -76, -91 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("camera/CamY:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("camera/RichTextLabel15:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=36]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("returns:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RichTextLabel14:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("camera:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -47 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("camera/CamY:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("camera/RichTextLabel15:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Functions" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="HugePanel" type="Sprite" parent="."]
visible = false
position = Vector2( -122, 400 )
texture = ExtResource( 11 )

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 9.0
margin_top = 118.0
margin_right = 205.0
margin_bottom = 204.0
theme = SubResource( 20 )
custom_fonts/font = ExtResource( 2 )
custom_icons/arrow = SubResource( 21 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/normal = SubResource( 25 )
align = 1

[node name="X" parent="." instance=ExtResource( 8 )]
margin_left = 277.0
margin_top = 117.0
margin_right = -1163.0
margin_bottom = -698.0
custom_fonts/font = SubResource( 26 )
align = 1

[node name="Y" parent="." instance=ExtResource( 8 )]
margin_left = 472.0
margin_top = 117.0
margin_right = -968.0
margin_bottom = -695.0
custom_fonts/font = SubResource( 26 )
align = 1

[node name="Speed" parent="." instance=ExtResource( 8 )]
margin_left = 375.0
margin_top = 179.0
margin_right = -1065.0
margin_bottom = -633.0
custom_fonts/font = SubResource( 26 )
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 9.0
margin_top = 79.0
margin_right = 206.0
margin_bottom = 117.0
rect_pivot_offset = Vector2( 143, 10 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]Point"
text = "Point"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 276.0
margin_top = 79.0
margin_right = 614.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]Position"
text = "Position"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 238.0
margin_top = 122.0
margin_right = 277.0
margin_bottom = 158.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]X:"
text = "X:"

[node name="RichTextLabel11" type="RichTextLabel" parent="."]
margin_left = 254.0
margin_top = 179.0
margin_right = 369.0
margin_bottom = 215.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]Speed:"
text = "Speed:"

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
margin_left = 433.0
margin_top = 122.0
margin_right = 472.0
margin_bottom = 158.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]Y:"
text = "Y:"

[node name="RichTextLabel9" type="RichTextLabel" parent="."]
margin_left = 12.0
margin_top = 7.0
margin_right = 618.0
margin_bottom = 78.0
rect_pivot_offset = Vector2( 143, 10 )
custom_fonts/normal_font = SubResource( 32 )
bbcode_enabled = true
bbcode_text = "[center]Platform"
text = "Platform"

[node name="RichTextLabel10" type="RichTextLabel" parent="."]
margin_left = 12.0
margin_top = 295.0
margin_right = 618.0
margin_bottom = 366.0
rect_pivot_offset = Vector2( 143, 10 )
custom_fonts/normal_font = SubResource( 32 )
bbcode_enabled = true
bbcode_text = "[center]Track"
text = "Track"

[node name="ChildOptionButton" type="OptionButton" parent="."]
margin_left = 9.0
margin_top = 422.0
margin_right = 205.0
margin_bottom = 508.0
theme = SubResource( 20 )
custom_fonts/font = ExtResource( 2 )
custom_icons/arrow = SubResource( 21 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/normal = SubResource( 25 )
align = 1

[node name="ChildX" parent="." instance=ExtResource( 8 )]
margin_left = 277.0
margin_top = 421.0
margin_right = -1163.0
margin_bottom = -394.0
custom_fonts/font = SubResource( 26 )
align = 1

[node name="ChildY" parent="." instance=ExtResource( 8 )]
margin_left = 472.0
margin_top = 421.0
margin_right = -968.0
margin_bottom = -391.0
custom_fonts/font = SubResource( 26 )
align = 1

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
margin_left = 9.0
margin_top = 383.0
margin_right = 206.0
margin_bottom = 421.0
rect_pivot_offset = Vector2( 143, 10 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]Point"
text = "Point"

[node name="RichTextLabel6" type="RichTextLabel" parent="."]
margin_left = 276.0
margin_top = 383.0
margin_right = 614.0
margin_bottom = 419.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]Position"
text = "Position"

[node name="RichTextLabel12" type="RichTextLabel" parent="."]
visible = false
margin_left = 1692.0
margin_top = 503.0
margin_right = 1821.0
margin_bottom = 539.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]Visible"
text = "Visible"

[node name="RichTextLabel7" type="RichTextLabel" parent="."]
margin_left = 238.0
margin_top = 426.0
margin_right = 277.0
margin_bottom = 462.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]X:"
text = "X:"

[node name="RichTextLabel8" type="RichTextLabel" parent="."]
margin_left = 433.0
margin_top = 426.0
margin_right = 472.0
margin_bottom = 462.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]Y:"
text = "Y:"

[node name="visible" type="CheckBox" parent="."]
visible = false
margin_left = 1638.0
margin_top = 492.0
margin_right = 1698.0
margin_bottom = 547.0
theme = ExtResource( 13 )
custom_icons/radio_checked_disabled = SubResource( 33 )
custom_icons/radio_checked = SubResource( 33 )
custom_icons/checked_disabled = SubResource( 33 )
custom_icons/radio_unchecked_disabled = SubResource( 33 )
custom_icons/checked = SubResource( 33 )
custom_icons/radio_unchecked = SubResource( 33 )
custom_icons/unchecked_disabled = SubResource( 33 )
custom_icons/unchecked = SubResource( 33 )
pressed = true

[node name="RichTextLabel14" type="RichTextLabel" parent="."]
margin_left = 168.0
margin_top = 629.0
margin_right = 532.0
margin_bottom = 665.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]Returns to start position"
text = "Returns to start position"

[node name="returns" type="CheckBox" parent="."]
margin_left = 114.0
margin_top = 618.0
margin_right = 174.0
margin_bottom = 673.0
theme = ExtResource( 13 )
custom_icons/radio_checked_disabled = SubResource( 33 )
custom_icons/radio_checked = SubResource( 33 )
custom_icons/checked_disabled = SubResource( 33 )
custom_icons/radio_unchecked_disabled = SubResource( 33 )
custom_icons/checked = SubResource( 33 )
custom_icons/radio_unchecked = SubResource( 33 )
custom_icons/unchecked_disabled = SubResource( 33 )
custom_icons/unchecked = SubResource( 33 )
pressed = true

[node name="RichTextLabel13" type="RichTextLabel" parent="."]
margin_left = 219.0
margin_top = 564.0
margin_right = 449.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]Reset on Death"
text = "Reset on Death"

[node name="reset" type="CheckBox" parent="."]
margin_left = 154.0
margin_top = 554.0
margin_right = 214.0
margin_bottom = 609.0
theme = ExtResource( 13 )
custom_icons/radio_checked_disabled = SubResource( 33 )
custom_icons/radio_checked = SubResource( 33 )
custom_icons/checked_disabled = SubResource( 33 )
custom_icons/radio_unchecked_disabled = SubResource( 33 )
custom_icons/checked = SubResource( 33 )
custom_icons/radio_unchecked = SubResource( 33 )
custom_icons/unchecked_disabled = SubResource( 33 )
custom_icons/unchecked = SubResource( 33 )
pressed = true

[node name="camera" type="Control" parent="."]
margin_top = -47.0
margin_right = 40.0
margin_bottom = -7.0

[node name="RichTextLabel14" type="RichTextLabel" parent="camera"]
margin_left = 170.0
margin_top = 743.0
margin_right = 429.0
margin_bottom = 779.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]Moves Camera Y"
text = "Moves Camera Y"

[node name="RichTextLabel15" type="RichTextLabel" parent="camera"]
visible = false
margin_left = 401.0
margin_top = 695.0
margin_right = 660.0
margin_bottom = 731.0
rect_pivot_offset = Vector2( 189, 14 )
mouse_filter = 2
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]Offset Y"
text = "Offset Y"

[node name="check" type="CheckBox" parent="camera"]
margin_left = 116.0
margin_top = 732.0
margin_right = 176.0
margin_bottom = 787.0
theme = ExtResource( 13 )
custom_icons/radio_checked_disabled = SubResource( 33 )
custom_icons/radio_checked = SubResource( 33 )
custom_icons/checked_disabled = SubResource( 33 )
custom_icons/radio_unchecked_disabled = SubResource( 33 )
custom_icons/checked = SubResource( 33 )
custom_icons/radio_unchecked = SubResource( 33 )
custom_icons/unchecked_disabled = SubResource( 33 )
custom_icons/unchecked = SubResource( 33 )

[node name="CamY" parent="camera" instance=ExtResource( 8 )]
visible = false
margin_left = 442.0
margin_top = 728.0
margin_right = 569.0
margin_bottom = 759.0
custom_fonts/font = SubResource( 26 )
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Move Camera Off" = SubResource( 34 )
"anims/Move Camera On" = SubResource( 35 )
anims/RESET = SubResource( 36 )

[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="text_changed" from="X" to="." method="_on_X_text_changed"]
[connection signal="text_changed" from="Y" to="." method="_on_Y_text_changed"]
[connection signal="text_changed" from="Speed" to="." method="_on_Speed_text_changed"]
[connection signal="item_selected" from="ChildOptionButton" to="." method="_on_ChildOptionButton_item_selected"]
[connection signal="text_changed" from="ChildX" to="." method="_on_ChildX_text_changed"]
[connection signal="text_changed" from="ChildY" to="." method="_on_ChildY_text_changed"]
[connection signal="pressed" from="visible" to="." method="_on_CheckButton_pressed"]
[connection signal="pressed" from="returns" to="." method="_on_returns_pressed"]
[connection signal="pressed" from="reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="camera/check" to="." method="_on_camera_pressed"]
[connection signal="text_changed" from="camera/CamY" to="." method="_on_CamY_text_changed"]
